--- a/app/src/main/res/layout/activity_edit_existing_test.xml
+++ b/app/src/main/res/layout/activity_edit_existing_test.xml
@@ -18,6 +18,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/one_test_add_question_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="21dp"
+        android:text="Add Question"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toTopOf="@+id/existing_test_questions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/existing_test_title" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/existing_test_questions"
@@ -59,4 +74,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/existing_test_questions"
         app:layout_constraintVertical_bias="0.606" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
