added menu bar and changed background, now can log out and create new test from dashboard menu bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9dc183"
+    android:background="@drawable/gradient_one"
     tools:context=".MainActivity">
 
     <TextView
@@ -19,7 +19,7 @@
         android:layout_marginBottom="8dp"
         android:text="TestCore | "
         android:textAlignment="center"
-        android:textColor="#FAFFFD"
+        android:textColor="@android:color/black"
         android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +41,7 @@
         android:layout_marginBottom="8dp"
         android:text="Test making made easy"
         android:textAlignment="center"
-        android:textColor="#FAFFFD"
+        android:textColor="@android:color/black"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -105,7 +105,7 @@
         android:layout_marginBottom="492dp"
         android:text="Or Sign In"
         android:textAlignment="center"
-        android:textColor="#FAFFFD"
+        android:textColor="@android:color/black"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,8 +123,8 @@
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textEmailAddress"
-        android:textColor="#FAFFFD"
-        android:textColorHint="#FAFFFD"
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.869"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,8 +141,8 @@
         android:ems="10"
         android:hint="Enter Password"
         android:inputType="textPassword"
-        android:textColor="#FAFFFD"
-        android:textColorHint="#FAFFFD"
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.995"
