--- a/app/src/main/res/layout/activity_view_edit_tests.xml
+++ b/app/src/main/res/layout/activity_view_edit_tests.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D2AB99"
+    android:background="@drawable/gradient_one"
     tools:context=".ViewEditTestsActivity">
 
     <ImageButton
